--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -19,7 +19,7 @@
                 {% for page in pages.object_list %}
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
                 <li class="cover" style="background-image:url('{% url 'books:page-thumbnail' page.pid %}')">
-                    <a href="#" title="{{ page.page_order }}"/>
+                    <a href="{% url 'books:page' page.pid %}" title="{{ page.page_order }}"/>
                 </li>
                 {% endfor %}
             </ul>
