--- a/readux/books/templates/books/volume.html
+++ b/readux/books/templates/books/volume.html
@@ -19,8 +19,11 @@
     <article>
         <div class="media">
             {% if vol.primary_image %}
-            {# TODO: link to single page view if volume has pages #}
-            <img class="pull-left thumbnail media-object" src="{% url 'books:page-thumbnail' vol.primary_image %}"/>
+                <div class="pull-left">
+                    {% if vol.has_pages %}<a href="{% url 'books:page' vol.primary_image.pid %}">{% endif %}
+                    <img class="thumbnail media-object" src="{% url 'books:page-thumbnail' vol.primary_image %}"/>
+                    {% if vol.has_pages %}</a>{% endif %}
+                </div>
             {% endif %}
 
             <div class="media-body">
