--- a/readux/books/templates/books/snippets/volume_links.html
+++ b/readux/books/templates/books/snippets/volume_links.html
@@ -7,7 +7,7 @@
 </a>
 
 <a class="btn btn-default {% if small_buttons %} btn-xs{% endif %}" href="{% url 'books:pages' vol.pid %}">
-    <span class="glyphicon glyphicon-book"></span>
+    <span class="glyphicon glyphicon-th"></span>
     <span>Browse pages</span>
 </a>
 {% endif %}
