--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -8,7 +8,7 @@
 
 {% block css %}
   {{ block.super }}
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="{% static 'css/readux.css' %}" />
 {% endblock %}
 
