Updated UI for Pages and Page views
[#67574342]
[#67574422]

Added toggles for consistency on Pages view
Added page numbers for thumbnails on Pages view
Added logic so individuals pages can link to their associated paginated
pages

--- a/readux/books/templates/books/snippets/list_volume_cover.html
+++ b/readux/books/templates/books/snippets/list_volume_cover.html
@@ -1,4 +1,4 @@
-<li class="cover" {% if obj.hasPrimaryImage %}style="background-image:url('{% url 'books:page-thumbnail' obj.hasPrimaryImage %}')"{% endif %}>
+<li class="cover" {% if obj.hasPrimaryImage %}style="background-image:url('{% url 'books:page-thumbnail' obj.hasPrimaryImage %}');background-color:#EEE;"{% endif %}>
     {# show the title if there is no image #}
     {% if not obj.hasPrimaryImage %}
       {{ obj.title|truncatechars:300 }}
