--- a/readux/books/templates/books/volume.html
+++ b/readux/books/templates/books/volume.html
@@ -10,10 +10,11 @@
 <div class="container">
     <header class="page-header">
         <h1>{{ vol.title }}
-            <span class="small">
-                {% if vol.volume %}[{{ vol.volume }}]{% endif %}
-                {% if vol.date %}({{ vol.date|join:', ' }}){% endif %}
-            </span>
+            {% if vol.volume %}<span class="small">[{{ vol.volume }}]</span>{% endif %}
+        </h1>
+        <p class="lead">
+            {% if vol.date %}({{ vol.date|join:', ' }}){% endif %}
+        </p>
         </h1>
     </header>
     <article>
