add google webmaster tools site verification meta tag to header

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -17,6 +17,10 @@
     <script type="text/javascript" src="{% static 'js/local.js' %}"></script>
 {% endblock %}
 
+{% block head_extras %}
+   <meta name="google-site-verification" content="WWdn3okWneQob5r6S1Svxtf87zwE1FHre0bRMvUzPvQ" />
+{% endblock %}
+
 {% block xs-nav-title %}
   <img src="{% static 'img/readux-inverse.png' %}"/><span>Readux</span>
 {% endblock %}
