add collection label/link to volume list view

--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -23,6 +23,10 @@
     </h4>
     <p>{{ obj.creator|join:'; ' }}</p>
 
+    {% if obj.collection_id and obj.collection_label %}
+    <p><b>Collection:</b> <a href="{% url 'collection:view' obj.collection_id %}">{{ obj.collection_label }}</a></p>
+    {% endif %}
+
     {% include 'books/snippets/volume_links.html' with vol=obj small_buttons=True %}
   </div>
 </div>
