Updated Page UI
[#74859160]

Added new images for not-found pages and thumbnails.
Added min-height to page container to avoid jumpy resizes on image load.

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -41,6 +41,12 @@ body{
     cursor:default;
 }
 
+article.carousel.page {
+    min-height: 30em;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .page-header h1 {
 	text-align: center;
 	font-size: 3em;
