--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -26,7 +26,7 @@
 
     </div>
 </header>
-    <article class="carousel">
+    <article class="carousel page">
         <div class="carousel-inner">
             <div class="text-center">
                 <p class="text-muted">Page {{page.page_order}}</p>
