suppress volume collection info on collection browse page

--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -23,7 +23,7 @@
     </h4>
     <p>{{ obj.creator|join:'; ' }}</p>
 
-    {% if obj.collection_id and obj.collection_label %}
+    {% if show_collection|default:'True' == 'True' and obj.collection_id and obj.collection_label %}
     <p><b>Collection:</b> <a href="{% url 'collection:view' obj.collection_id %}">{{ obj.collection_label }}</a></p>
     {% endif %}
 
