--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -24,14 +24,14 @@ body{
 	transition: background-color 0.2s;
 }
 
-.facets .nav>li>a:hover, 
+.facets .nav>li>a:hover,
 .facets .nav>li>a:focus{
 	background-color: #E4ECF1;
 }
-.facets.active-filters .nav>li>a:hover, 
+.facets.active-filters .nav>li>a:hover,
 .facets.active-filters .nav>li>a:focus{
     color: #661919;
-	
+
     background-color: #ECDFDF;
 }
 
@@ -347,7 +347,7 @@ h1.site-title {
 }
 
 h1.site-title a{
-	opacity:0.8;	
+	opacity:0.8;
 	transition:opacity 0.2s;
 	position: relative;
 	float: left;
@@ -355,7 +355,7 @@ h1.site-title a{
 
 h1.site-title a:hover,
 h1.site-title a:focus{
-	opacity:1;	
+	opacity:1;
 }
 
 
@@ -388,7 +388,7 @@ h1.site-title a:focus{
 
 #view-toggle .btn{
 	border: 1px solid #DDD;
-	
+
 }
 #view-toggle .btn.active {
 	background-color: #6CACE7;
@@ -510,4 +510,16 @@ span.glyphicon.glyphicon-chevron-left {
 header.page-header {
     position: relative;
     z-index: 10;
+}
+
+
+#zoom-page {
+   position: absolute;
+   text-align:center;
+   z-index: -3;
+   width: 100%;
+   height: 1000px;
+   /*border:1px solid gray;*/
+   /*background-color: white;*/
+   color: black;
 }
