--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -5,13 +5,16 @@
 
 {% block javascript %}
   {{ block.super }}
-  <script type="text/javascript" src="{{ STATIC_URL }}js/seadragon-min.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}js/openseadragon/openseadragon.min.js"></script>
   <script type="text/javascript" charset="utf-8">
      $(document).ready(function () {
-        // config seadragon, but don't load unless triggered by user
-        Seadragon.Config.imagePath = "{{ STATIC_URL }}/js/seadragon/img/";
+        // set up seadragon configuration, but don't load unless triggered by user
         var viewer = null;
-        var dzi_url = "{% url 'deepzoom:dzi' page.pid %}";
+        var seadragon_opts = {
+            id: "zoom-page",
+            prefixUrl: "{{ STATIC_URL }}js/openseadragon/images/",
+            tileSources: "{% url 'deepzoom:dzi' page.pid %}",
+        };
 
         /* enable-zoom button toggles deep-zoom page view mode */
         $("#enable-zoom").click(function(){
@@ -19,8 +22,7 @@
             $("#zoom-page").css('z-index', -3);
           } else {  // enable and show
             if (viewer == null) {   // init viewer first time
-              viewer = new Seadragon.Viewer("zoom-page");
-              viewer.openDzi(dzi_url);
+              viewer = OpenSeadragon(seadragon_opts);
             }
             $("#zoom-page").css('z-index', 3);  // show: move above
           }
@@ -45,7 +47,7 @@
         <div class="container">
             <div id="view-toggle" class="pull-right">
                 <div class="btn-group">
-                    <a id="enable-zoom" href="#" class="btn"><span class="glyphicon glyphicon-zoom-in"></span></a>
+                    <a id="enable-zoom" href="#" class="btn"><span class="glyphicon glyphicon-fullscreen"></span></a>
 
                     <a id="covers" href="#" class="btn active"><span class="glyphicon glyphicon-file"></span></a>
 
